--- a/tdee.html
+++ b/tdee.html
@@ -39,7 +39,7 @@ outline: solid #f00 1px !important;
             </a>
 
             <nav class="navbar">
-                <a href="./RickyFitness.html" class="item">首頁</a>
+                <a href="./index.html" class="item">首頁</a>
                 <a href="./商城.html" class="item">線上商城</a>
                 <a href="./tdee.html" class="item">tdee計算機</a>
                 <a href="./teach.html" class="item">訓練教學</a>
@@ -169,7 +169,7 @@ outline: solid #f00 1px !important;
                     <div class='col-md-4 text-left'>
                         <h4>連結</h4>
                         <ul>
-                            <li><a href='./RickyFitness.html'>首頁</a></li>
+                            <li><a href='./index.html'>首頁</a></li>
                             <li><a href='./商城.html'>線上商城</a></li>
                         </ul>
                         <ul>
