--- a/商城.html
+++ b/商城.html
@@ -164,7 +164,7 @@
             </a>
 
             <nav class="navbar">
-                <a href="./RickyFitness.html" class="item">首頁</a>
+                <a href="./index.html" class="item">首頁</a>
                 <a href="./商城.html" class="item">線上商城</a>
                 <a href="./tdee.html" class="item">tdee計算機</a>
                 <a href="./teach.html" class="item">訓練教學</a>
