--- a/聯絡.html
+++ b/聯絡.html
@@ -64,7 +64,7 @@
                   <div class='col-md-4 text-left'>
                     <h4>連結</h4>
                     <ul>
-                        <li><a href='./RickyFitness.html'>首頁</a></li>
+                        <li><a href='./index.html'>首頁</a></li>
                         <li><a href='./商城.html'>線上商城</a></li>
                     </ul>
                     <ul>
