--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <br>
 
 
-            <h1 class="display-4">台中最專業的健身課程</h1>
+            <h1 class="display-4">台中最專業的健身課程！</h1>
             <p class="lead">趕快動起來吧!</p>
             <a class="btn btn-primary btn-lg" href="./聯絡.html" role="button">我要報名</a>
             <br>
